@@ -2,6 +2,8 @@ package net.pitan76.assetbridge.archive;
 
 import org.junit.jupiter.api.Test;
 
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -11,7 +13,7 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 class ModMetadataTest {
     @Test
     void readsFabricName() {
-        Map<String, String> names = ModMetadata.displayNames(Map.of(
+        Map<String, String> names = ModMetadata.displayNames(Collections.singletonMap(
                 "fabric.mod.json", "\n                        {\"id\": \"rubycraft\", \"name\": \"Ruby Craft\"}"));
 
         assertEquals("Ruby Craft", names.get("rubycraft"));
@@ -19,7 +21,7 @@ class ModMetadataTest {
 
     @Test
     void readsEveryModsTomlBlock() {
-        Map<String, String> names = ModMetadata.displayNames(Map.of(
+        Map<String, String> names = ModMetadata.displayNames(Collections.singletonMap(
                 "META-INF/mods.toml", "\n                        modLoader=\"javafml\"\n                        [[mods]]\n                        modId=\"buildcraftcore\"\n                        displayName=\"BuildCraft Core\"\n                        [[mods]]\n                        modId=\"buildcraftfactory\"\n                        displayName=\"BuildCraft Factory\"\n                        [[dependencies.buildcraftcore]]\n                        modId=\"minecraft\"\n                        "));
 
         assertEquals("BuildCraft Core", names.get("buildcraftcore"));
@@ -30,9 +32,11 @@ class ModMetadataTest {
 
     @Test
     void ignoresBlankAndMissingNames() {
-        Map<String, String> names = ModMetadata.displayNames(Map.of(
-                "fabric.mod.json", "\n                        {\"id\": \"nameless\"}",
-                "META-INF/mods.toml", "\n                        [[mods]]\n                        modId=\"blank\"\n                        displayName=\"  \"\n                        "));
+        Map<String, String> map = new HashMap<>();
+        map.put("fabric.mod.json", "\n                        {\"id\": \"nameless\"}");
+        map.put("META-INF/mods.toml", "\n                        [[mods]]\n                        modId=\"blank\"\n                        displayName=\"  \"\n                        ");
+
+        Map<String, String> names = ModMetadata.displayNames(map);
 
         assertTrue(names.isEmpty());
     }
